--- a/ShoppingCartWeb/Views/CountryMaster/CreateCountryMaster.cshtml
+++ b/ShoppingCartWeb/Views/CountryMaster/CreateCountryMaster.cshtml
@@ -27,10 +27,10 @@
                     </div>
 
                     <div class="col-2 offset-5">
-                        <a asp-action="IndexCountryMaster" asp-controller="CountryMaster" class="btn-primary btn form-control ">Cancel</a>
+                        <a asp-action="IndexCountryMaster" asp-controller="CountryMaster" class="btn-primary btn form-control " style="font-size: 14px;">Cancel</a>
                     </div>
                     <div class="col-2">
-                        <input type="submit" value="Save" class="btn btn-success form-control" />
+                        <input type="submit" value="Save" class="btn btn-success form-control" style="font-size: 13px;" />
                     </div>
                 </div>
             </div>
