--- a/ShoppingCartWeb/Views/StateMaster/CreateStateMaster.cshtml
+++ b/ShoppingCartWeb/Views/StateMaster/CreateStateMaster.cshtml
@@ -38,11 +38,11 @@
                     </div>
 
                     
-                    <div class="col-2 offset-7">
-                        <a asp-action="IndexStateMaster" asp-controller="StateMaster" class="btn-primary btn form-control ">Cancel</a>
+                    <div class="col-3 offset-5">
+                        <a asp-action="IndexStateMaster" asp-controller="StateMaster" class="btn-primary btn form-control " style="font-size: 14px;">Cancel</a>
                     </div>
-                    <div class="col-2">
-                        <input type="submit" value="Save" class="btn btn-success form-control" />
+                    <div class="col-3">
+                        <input type="submit" value="Save" class="btn btn-success form-control" style="font-size: 13px;" />
                     </div>
                 </div>
             </div>
