--- a/ShoppingCartWeb/Views/CountryMaster/IndexCountryMaster.cshtml
+++ b/ShoppingCartWeb/Views/CountryMaster/IndexCountryMaster.cshtml
@@ -1,4 +1,4 @@
-﻿@model IEnumerable<ShoppingCartWeb.Models.Dto.CountryMasterDTO>
+﻿@model ShoppingCartWeb.Models.VM.CountryPaginationVM
 
 @{
     Layout = "~/Views/Shared/_Layout.cshtml";
@@ -6,6 +6,7 @@
 }
 
 <br />
+
 <div class="row pb-2">
     <div class="col">
         <style>
@@ -36,11 +37,8 @@
 <div>
 
     <div class="table-responsive">
-        <!-- Inside your main view (Index.cshtml) -->
-        <input type="hidden" id="currentPage" value="1" />
 
-
-        <table id="tableDemo" class="table table-bordered">
+        <table id="myTable" class="table table-bordered">
             <thead>
                 <tr>
                     <th>
@@ -54,7 +52,7 @@
             </thead>
             <tbody>
 
-                @foreach (var item in Model)
+                @foreach (var item in Model.CountryMasterDTO)
                 {
 
                     <tr>
@@ -70,8 +68,11 @@
                                     </a>
 
 
-                                    <a href="#" class="btn btn-sm ml-1" data-toggle="modal" data-target="#deleteModal_@item.CountryId">
-                                        <span id="boot-icon" class="bi bi-trash-fill" style="font-size: 17px; color: rgb(255, 0, 0); -webkit-text-stroke-width: 0px; opacity: 0.9;"></span>
+                                    <a href="#" class="btn ml-1 text-danger delete-button" style="font:bold" data-toggle="modal" data-target="#deleteModal" data-countryId="@item.CountryId">
+                                        
+                                        <span id="boot-icon" class="bi bi-trash-fill" 
+                                                style="font-size: 17px; color: rgb(255, 0, 0); -webkit-text-stroke-width: 0px; opacity: 0.9;">
+                                        </span>
                                     </a>
 
                                 </div>
@@ -81,111 +82,144 @@
                         {
                             <td>
                                 <div class="btn-group" role="group">
-                                    <a href="#" class="btn btn-primary btn-sm ml-2" data-toggle="modal" data-target="#enableModal_@item.CountryId"> Active </a>
+
+                                    <a href="#" class="btn btn-primary btn-sm ml-2 enable-button" data-toggle="modal" data-target="#enableModal" data-countryId="@item.CountryId">
+                                        Active
+                                    </a>
+
                                 </div>
                             </td>
                         }
                     </tr>
 
-                    <!-- Enable Confirmation Modal for each item -->
-                    <div class="modal fade" id="enableModal_@item.CountryId" tabindex="-1" role="dialog" aria-labelledby="enableModalLabel" aria-hidden="true">
-                        <div class="modal-dialog" role="document">
-                            <div class="modal-content">
-                                <div class="modal-header">
-                                    <h5 class="modal-title" id="enableModalLabel">Confirm Enable</h5>
-                                    <button type="button" class="close" data-dismiss="modal" aria-label="Close">
-                                        <span aria-hidden="true">&times;</span>
-                                    </button>
-                                </div>
-                                <div class="modal-body">
-                                    Are you sure you want to Enable this item?
-                                </div>
-                                <div class="modal-footer">
-                                    <button type="button" class="btn btn-secondary" data-dismiss="modal">No</button>
-                                    <a asp-controller="CountryMaster" asp-action="EnableCountry" asp-route-countryId="@item.CountryId" class="btn btn-success">Yes</a>
-                                </div>
-                            </div>
-                        </div>
-                    </div>
-
-                    <!-- Delete Confirmation Modal for each item -->
-                    <div class="modal fade" id="deleteModal_@item.CountryId" tabindex="-1" role="dialog" aria-labelledby="deleteModalLabel" aria-hidden="true">
-                        <div class="modal-dialog" role="document">
-                            <div class="modal-content">
-                                <div class="modal-header">
-                                    <h5 class="modal-title" id="deleteModalLabel">Confirm Deletion</h5>
-                                    <button type="button" class="close" data-dismiss="modal" aria-label="Close">
-                                        <span aria-hidden="true">&times;</span>
-                                    </button>
-                                </div>
-                                <div class="modal-body">
-                                    Are you sure you want to delete this item?
-                                </div>
-                                <div class="modal-footer">
-                                    <button type="button" class="btn btn-secondary" data-dismiss="modal">Cancel</button>
-                                    <a asp-controller="CountryMaster" asp-action="RemoveCountryMaster" asp-route-countryId="@item.CountryId" class="btn btn-danger">Delete</a>
-                                </div>
-                            </div>
-                        </div>
-                    </div>
-
+                    
                 }
+
+                <!-- Enable Confirmation Modal for each item -->
+                <div class="modal fade" id="enableModal" tabindex="-1" role="dialog" aria-labelledby="enableModalLabel" aria-hidden="true">
+                    <div class="modal-dialog" role="document">
+                        <div class="modal-content">
+                            <div class="modal-header">
+                                <h5 class="modal-title" id="enableModalLabel">Confirm Enable</h5>
+                                <button type="button" class="close" data-dismiss="modal" aria-label="Close">
+                                    <span aria-hidden="true">&times;</span>
+                                </button>
+                            </div>
+                            <div class="modal-body">
+                                Are you sure you want to Enable this item?
+                            </div>
+                            <div class="modal-footer">
+                                <button type="button" class="btn btn-secondary" data-dismiss="modal">No</button>
+                                <a id="enableModalButton" asp-controller="CountryMaster" asp-action="EnableCountry" asp-route-countryId="" class="btn btn-success">Yes</a>
+                            </div>
+                        </div>
+                    </div>
+                </div>
+
+                <!-- Delete Confirmation Modal for each item -->
+                <div class="modal fade" id="deleteModal" tabindex="-1" role="dialog" aria-labelledby="deleteModalLabel" aria-hidden="true">
+                    <div class="modal-dialog" role="document">
+                        <div class="modal-content">
+                            <div class="modal-header">
+                                <h5 class="modal-title" id="deleteModalLabel">Confirm Deletion</h5>
+                                <button type="button" class="close" data-dismiss="modal" aria-label="Close">
+                                    <span aria-hidden="true">&times;</span>
+                                </button>
+                            </div>
+                            <div class="modal-body">
+                                Are you sure you want to delete this item?
+                            </div>
+                            <div class="modal-footer">
+                                <button type="button" class="btn btn-secondary" data-dismiss="modal">Cancel</button>
+                                <a id="deleteModalButton" asp-controller="CountryMaster" asp-action="RemoveCountryMaster" asp-route-countryId="" class="btn btn-danger">Delete</a>
+                            </div>
+                        </div>
+                    </div>
+                </div>
+
 
             </tbody>
         </table>
-        <div id="pagination"></div>
+    
     </div>
+
+    <br />
+    <br />
+
+    <div>
+
+        <nav aria-label="Page navigation example" style="float: right;margin-top: -35px;margin-right: 2px;font-size: smaller;">
+
+            <ul class="pagination">
+                @if (Model.CurrentPage > 1)
+                {
+                    <li class="page-item">
+                        <a class="page-link" href="/CountryMaster/IndexCountryMaster?orderBy=@Model.OrderBy&currentPage=@(Model.CurrentPage-1)" aria-label="Previous">
+                            <span aria-hidden="true">&laquo;</span>
+                        </a>
+                    </li>
+                }
+
+                @for (int i = 1; i <= Model.TotalPages; i++)
+                {
+                    if (i == Model.CurrentPage)
+                    {
+                        <li class="page-item active"><a class="page-link active" href="/CountryMaster/IndexCountryMaster?orderBy=@Model.OrderBy&currentPage=@i"> @i</a></li>
+
+                    }
+                    else
+                    {
+                        <li class="page-item"><a class="page-link" href="/CountryMaster/IndexCountryMaster?orderBy=@Model.OrderBy&currentPage=@i"> @i</a></li>
+                    }
+                }
+                @if (Model.CurrentPage < Model.TotalPages)
+                {
+                    <li class="page-item">
+                        <a class="page-link" href="/CountryMaster/IndexCountryMaster?orderBy=@Model.OrderBy&currentPage=@Model.CurrentPage+1" aria-label="Next">
+                            <span aria-hidden="true">&raquo;</span>
+                        </a>
+                    </li>
+                }
+            </ul>
+        </nav>
+
+    </div>
+
+
 </div>
 
+<br />
 
 @section Scripts {
-    <!-- Include the CSS for the pagination -->
-    <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/simplePagination.js/1.4/simplePagination.css" integrity="sha512-emkhkASXU1wKqnSDVZiYpSKjYEPP8RRG2lgIxDFVI4f/twjijBnDItdaRh7j+VRKFs4YzrAcV17JeFqX+3NVig==" crossorigin="anonymous" referrerpolicy="no-referrer" />
 
-    <!-- Add a custom CSS style to change the color of pagination numbers to blue -->
-    <style>
-        .light-theme .current {
-            background-color: blue;
-            color: white;
-            border: 1px solid blue;
-        }
-    </style>
-
-    <!-- Rest of your HTML and JavaScript code -->
-    <script src="https://cdnjs.cloudflare.com/ajax/libs/jquery/3.6.3/jquery.min.js" integrity="sha512-STof4xm1wgkfm7heWqFJVn58Hm3EtS31XFaagaa8VMReCXAkQnJZ+jEy8PCC/iT18dFy95WcExNHFTqLyp72eQ==" crossorigin="anonymous" referrerpolicy="no-referrer"></script>
-    <script src="https://cdnjs.cloudflare.com/ajax/libs/simplePagination.js/1.4/jquery.simplePagination.js" integrity="sha512-D8ZYpkcpCShIdi/rxpVjyKIo4+cos46+lUaPOn2RXe8Wl5geuxwmFoP+0Aj6wiZghAphh4LNxnPDiW4B802rjQ==" crossorigin="anonymous" referrerpolicy="no-referrer"></script>
 
     <script>
-        $(function () {
-            $('#pagination').pagination({
-                items: $('#tableDemo tr').length,
-                itemsOnPage: 5,
-                cssStyle: 'light-theme',
-                onPageClick: function (pageNumber) {
-                    debugger;
-                    var perpage = 5;
-                    var showfrom = perpage * (pageNumber - 1);
-                    var showTo = showfrom + perpage;
-                    $('#tableDemo tbody tr').hide().slice(showfrom, showTo).show();
-                }
-            });
-            $('#pagination').pagination('selectPage', 1);
-
-            $('.update-button').click(function () {
-                var countryId = $(this).data('country-id');
-                var currentPage = $('#pagination').pagination('getCurrentPage'); // Get the current page number
-                console.log(countryId);
-                console.log(currentPage);
-
-                // Construct the URL with the countryId and currentPage
-                var updateUrl = '@Url.Action("UpdateCountryMaster", "CountryMaster", new { countryId = "__countryId__", pageNumber = "__pageNumber__" })';
-                updateUrl = updateUrl.replace('__countryId__', countryId).replace('__pageNumber__', currentPage);
-
-                // Redirect to the update URL
-                window.location.href = updateUrl;
-            });
+        $(document).ready(function () {
+            $('#myTable').DataTable(
+                {
+                    "paging": false
+                });
         });
     </script>
 
+    <script>
+        $(document).ready(function () {
+            $('.delete-button').click(function () {
+                var countryId = $(this).data('countryid');
+                console.log(countryId);
+                $('#countryIdToDelete').text(countryId); // Set the StateId in the modal
+                $('#deleteModalButton').attr('href', '/CountryMaster/RemoveCountryMaster?countryId=' + countryId); // Set the Delete button's URL
+            });
+        });
 
+        $(document).ready(function () {
+            $('.enable-button').click(function () {
+
+                var countryId = $(this).data('countryid');
+
+                $('#countryIdToEnable').text(countryId); // Set the StateId in the modal
+                $('#enableModalButton').attr('href', '/CountryMaster/EnableCountry?countryId=' + countryId); // Set the button's URL
+            });
+        });
+    </script>
 }
