--- a/ShoppingCartWeb/Views/CountryMaster/UpdateCountryMaster.cshtml
+++ b/ShoppingCartWeb/Views/CountryMaster/UpdateCountryMaster.cshtml
@@ -33,10 +33,10 @@
 
 
                     <div class="col-2 offset-5">
-                        <a asp-action="IndexCountryMaster" asp-controller="CountryMaster" class="btn-primary btn form-control ">Cancel</a>
+                        <a asp-action="IndexCountryMaster" asp-controller="CountryMaster" class="btn-primary btn form-control " style="font-size: 14px;">Cancel</a>
                     </div>
                     <div class="col-2">
-                        <input type="submit" value="Update" class="btn btn-success form-control" />
+                        <input type="submit" value="Update" class="btn btn-success form-control" style="font-size: 13px;" />
                     </div>
                 </div>
             </div>
