--- a/ShoppingCartWeb/Views/Registration/CreateRegistration.cshtml
+++ b/ShoppingCartWeb/Views/Registration/CreateRegistration.cshtml
@@ -38,7 +38,7 @@
 
                 <div class="col-10 pb-3">
                     <label asp-for="Registration.Gender" class="control-label pt-2" style="font-size: 16px;">Gender</label>
-                    
+
                     <div class="form-check form-check-inline ml-2">
 
                         <input class="form-check-input" type="radio" asp-for="Registration.Gender" value="Male" />
@@ -64,7 +64,7 @@
 
                 <div class="col-10 pb-3">
                     <label asp-for="Registration.DateOfBirth" class="control-label pt-2" style="font-size:16px;">Date Of Birth</label>
-                    <input value="" asp-for="Registration.DateOfBirth" class="form-control" required/>
+                    <input value="" asp-for="Registration.DateOfBirth" class="form-control" required />
                     <span asp-validation-for="Registration.DateOfBirth" class="text-danger"></span>
                 </div>
 
@@ -115,13 +115,13 @@
                     <label asp-for="Registration.StateId" class="control-label pt-2" style="font-size:16px;">State</label>
 
                     <select asp-for="Registration.StateId" id="stateDropdown" class="form-control" required>
-                        <option value="">--Select State--</option>
+                        <option value="" disabled selected>--Select State--</option>
                     </select>
 
                     <span asp-validation-for="Registration.StateId" class="text-danger"></span>
                 </div>
             </div>
-            
+
         </div>
         <div class="row">
 
@@ -130,6 +130,7 @@
 
                 <br />
                 <br />
+
                 <div class="row">
                     <div class="col-4">
                         <a asp-action="IndexRegistration" asp-controller="Registration" class="btn-primary btn form-control">Cancel</a>
@@ -138,6 +139,7 @@
                         <input type="submit" value="Save" class="btn btn-success form-control" />
                     </div>
                 </div>
+
             </div>
         </div>
     </div>
@@ -148,21 +150,37 @@
     <partial name="_ValidationScriptsPartial" />
 
     <script>
-        $(document).ready(function () {
-            $("#countryId").change(function () {
-                var countryId = $(this).val();
-                $("#stateDropdown").empty();
 
+        // When the document is ready (page is loaded)
+        $(document).ready(function () {
+
+            // When the "countryId" dropdown selection changes
+            $("#countryId").change(function () {
+
+                // Get the selected value of the "countryId" dropdown
+                var countryId = $(this).val();
+
+                // Set the state dropdown to have no selected value (clear the selection)
+                $("#stateDropdown").val("");
+
+                // Check if a country is selected
                 if (countryId !== "") {
+                    // If a country is selected, make an AJAX request to get the states for the selected country
                     $.ajax({
-                        url: '@Url.Action("GetStateByCountryId", "Registration")',
-                        data: { countryId: countryId },
-                        type: 'GET',
-                        dataType: 'json',
-                        success: function (states) {
-                            //alert(JSON.stringify(states));
+                        url: '@Url.Action("GetStateByCountryId", "Registration")', // URL for the AJAX request
+                        data: { countryId: countryId }, // Data to send to the server
+                        type: 'GET', // HTTP request type (GET in this case)
+                        dataType: 'json', // Expected data type in the response (JSON in this case)
+                        success: function (states) { // Function to execute when the request is successful
+
+                            // Empty the "stateDropdown" to remove existing options
+                            $("#stateDropdown").empty();
+
+                            // Add a default option for "Select State" that is disabled and selected by default
+                            $("#stateDropdown").append('<option value="" disabled selected>--Select State--</option>');
+
+                            // Loop through the retrieved states and add them as options to the "stateDropdown"
                             $.each(states, function (i, state) {
-                                //alert(state.stateId
                                 $("#stateDropdown").append('<option value="' + state.stateId + '">' + state.stateName + '</option>');
                             });
                         }
@@ -170,5 +188,35 @@
                 }
             });
         });
+
+
+
+                //$(document).ready(function () {
+                //    $("#countryId").change(function () {
+                //        var countryId = $(this).val();
+
+                //        //$("#stateDropdown").empty();
+
+                //        if (countryId !== "") {
+                //            $.ajax({
+                //                url: '@Url.Action("GetStateByCountryId", "Registration")',
+                //                data: { countryId: countryId },
+                //                type: 'GET',
+                //                dataType: 'json',
+                //                success: function (states) {
+
+                //                    //alert(JSON.stringify(states));
+
+                //                    $.each(states, function (i, state) {
+
+                //                        //alert(state.stateId
+                //                        $("#stateDropdown").append('<option value="' + state.stateId + '">' + state.stateName + '</option>');
+
+                //                    });
+                //                }
+                //            });
+                //        }
+                //    });
+                //});
     </script>
 }
