--- a/ShoppingCartWeb/Views/Registration/IndexRegistration.cshtml
+++ b/ShoppingCartWeb/Views/Registration/IndexRegistration.cshtml
@@ -5,6 +5,8 @@
 }
 
 <br />
+
+
 <div class="row">
     <div class="col">
         <style>
@@ -14,7 +16,7 @@
             }
         </style>
 
-        <h1 class="text-dark">Registered Members</h1>
+        <h1 class="text-dark">Registered Persons</h1>
     </div>
     <div class="col-2 d-flex justify-content-end align-items-start">
         <a asp-controller="Registration" asp-action="CreateRegistration" class="btn btn-primary btn-sm ms-2">
@@ -35,7 +37,7 @@
 <div>
 
     <div class="table-responsive">
-        <table class="table table-bordered">
+        <table id="myTable" class="table table-bordered">
             <thead>
                 <tr>
 
@@ -54,9 +56,6 @@
                         Gender
                     </th>
                     <th>
-                        DateOfBirth
-                    </th>
-                    <th>
                         Email
                     </th>
                     <th>
@@ -64,9 +63,6 @@
                     </th>
                     <th>
                         Country
-                    </th>
-                    <th>
-                        State
                     </th>
                     <th>
                         Action
@@ -86,11 +82,10 @@
                         <td>@item.LastName</td>
                         <td>@item.CategoryMaster.CategoryName</td>
                         <td>@item.Gender</td>
-                        <td style="white-space: nowrap;"> @item.DateOfBirth.ToString("dd-MM-yyyy")</td>
+                        @*<td style="white-space: nowrap;"> @item.DateOfBirth.ToString("dd-MM-yyyy")</td>*@
                         <td>@item.Email</td>
                         <td>@item.ContactNo</td>
                         <td>@item.CountryMaster.CountryName</td>
-                        <td style="white-space: nowrap;">@item.StateMaster.StateName</td>
 
                         @if (item.IsDeleted == false)
                         {
@@ -107,10 +102,12 @@
                                         <span id="boot-icon" class="bi bi-pencil-square" style="font-size: 17px; color: rgb(0, 128, 55); -webkit-text-stroke-width: 0.6px; opacity: 0.9;"></span>
                                     </a>
 
-                                    <a href="#" class="btn btn-sm ml-1" data-toggle="modal" data-target="#deleteModal_@item.RegistrationId">
-                                        <span id="boot-icon" class="bi bi-trash-fill" style="font-size: 17px; color: rgb(255, 0, 0); -webkit-text-stroke-width: 0px; opacity: 0.9;"></span>
-                                    </a>
+                                    <a href="#" class="btn ml-1 text-danger delete-button" style="font:bold" data-toggle="modal" data-target="#deleteModal" data-registrationId="@item.RegistrationId">
 
+                                        <span id="boot-icon" class="bi bi-trash-fill"
+                                              style="font-size: 17px; color: rgb(255, 0, 0); -webkit-text-stroke-width: 0px; opacity: 0.9;">
+                                        </span>
+                                    </a>
 
                                 </div>
                             </td>
@@ -121,57 +118,61 @@
                             <td>
                                 <div class="btn-group" role="group">
 
-                                    <a href="#" class="btn btn-primary btn-sm ml-2" data-toggle="modal" data-target="#enableModal_@item.RegistrationId"> Active </a>
-
+                                    <a 
+                                        href="#" class="btn btn-primary btn-sm ml-2 enable-button" data-toggle="modal" data-target="#enableModal" data-registrationId="@item.RegistrationId">
+                                        Active
+                                    </a>
                                 </div>
                             </td>
                         }
-
                     </tr>
 
 
-                    <!-- Delete Confirmation Modal for each item -->
-                    <div class="modal fade" id="deleteModal_@item.RegistrationId" tabindex="-1" role="dialog" aria-labelledby="deleteModalLabel" aria-hidden="true">
-                        <div class="modal-dialog" role="document">
-                            <div class="modal-content">
-                                <div class="modal-header">
-                                    <h5 class="modal-title" id="deleteModalLabel">Confirm Deletion</h5>
-                                    <button type="button" class="close" data-dismiss="modal" aria-label="Close">
-                                        <span aria-hidden="true">&times;</span>
-                                    </button>
-                                </div>
-                                <div class="modal-body">
-                                    Are you sure you want to delete this item?
-                                </div>
-                                <div class="modal-footer">
-                                    <button type="button" class="btn btn-secondary" data-dismiss="modal">Cancel</button>
-                                    <a asp-controller="Registration" asp-action="RemoveRegistration" asp-route-registrationId="@item.RegistrationId" asp-route-currentPageNo="@Model.CurrentPage" asp-route-orderBys-="@Model.OrderBy" class="btn btn-danger">Delete</a>
-                                </div>
-                            </div>
-                        </div>
-                    </div>
-
-                    <!-- Enable Confirmation Modal for each item -->
-                    <div class="modal fade" id="enableModal_@item.RegistrationId" tabindex="-1" role="dialog" aria-labelledby="enableModalLabel" aria-hidden="true">
-                        <div class="modal-dialog" role="document">
-                            <div class="modal-content">
-                                <div class="modal-header">
-                                    <h5 class="modal-title" id="enableModalLabel">Confirm Enable</h5>
-                                    <button type="button" class="close" data-dismiss="modal" aria-label="Close">
-                                        <span aria-hidden="true">&times;</span>
-                                    </button>
-                                </div>
-                                <div class="modal-body">
-                                    Are you sure you want to Enable this item?
-                                </div>
-                                <div class="modal-footer">
-                                    <button type="button" class="btn btn-secondary" data-dismiss="modal">No</button>
-                                    <a asp-controller="Registration" asp-action="EnableRegistration" asp-route-registrationId="@item.RegistrationId" asp-route-currentPageNo="@Model.CurrentPage" class="btn btn-success">Yes</a>
-                                </div>
-                            </div>
-                        </div>
-                    </div>
                 }
+
+                <!-- Enable Confirmation Modal for each item -->
+                <div class="modal fade" id="enableModal" tabindex="-1" role="dialog" aria-labelledby="enableModalLabel" aria-hidden="true">
+                    <div class="modal-dialog" role="document">
+                        <div class="modal-content">
+                            <div class="modal-header">
+                                <h5 class="modal-title" id="enableModalLabel">Confirm Enable</h5>
+                                <button type="button" class="close" data-dismiss="modal" aria-label="Close">
+                                    <span aria-hidden="true">&times;</span>
+                                </button>
+                            </div>
+                            <div class="modal-body">
+                                Are you sure you want to Enable this item?
+                            </div>
+                            <div class="modal-footer">
+                                <button type="button" class="btn btn-secondary" data-dismiss="modal">No</button>
+                                <a id="enableModalButton" asp-controller="Registration" asp-action="EnableRegistration" asp-route-registrationId="" asp-route-currentPageNo="@Model.CurrentPage" class="btn btn-success">Yes</a>
+                            </div>
+                        </div>
+                    </div>
+                </div>
+
+                <!-- Delete Confirmation Modal for each item -->
+                <div class="modal fade" id="deleteModal" tabindex="-1" role="dialog" aria-labelledby="deleteModalLabel" aria-hidden="true">
+                    <div class="modal-dialog" role="document">
+                        <div class="modal-content">
+                            <div class="modal-header">
+                                <h5 class="modal-title" id="deleteModalLabel">Confirm Deletion</h5>
+                                <button type="button" class="close" data-dismiss="modal" aria-label="Close">
+                                    <span aria-hidden="true">&times;</span>
+                                </button>
+                            </div>
+                            <div class="modal-body">
+                                Are you sure you want to delete this item?
+                            </div>
+                            <div class="modal-footer">
+                                <button type="button" class="btn btn-secondary" data-dismiss="modal">Cancel</button>
+                                <a id="deleteModalButton" asp-controller="Registration" asp-action="RemoveRegistration" asp-route-registrationId="" asp-route-currentPageNo="@Model.CurrentPage" asp-route-orderBys-="@Model.OrderBy" class="btn btn-danger">Delete</a>
+                            </div>
+                        </div>
+                    </div>
+                </div>
+
+
 
 
                 @foreach (var item in Model.Registration)
@@ -211,7 +212,11 @@
         </table>
     </div>
 
-    <nav aria-label="Page navigation example" class="justify-content-end">
+    <br />
+    <br />
+
+    <nav aria-label="Page navigation example" style="float: right;margin-top: -35px;margin-right: 2px;font-size: smaller;">
+
         <ul class="pagination">
             @if (Model.CurrentPage > 1)
             {
@@ -226,7 +231,7 @@
             {
                 if (i == Model.CurrentPage)
                 {
-                    <li class="page-item"><a class="page-link active" href="/Registration/IndexRegistration?orderBy=@Model.OrderBy&currentPage=@i"> @i</a></li>
+                    <li class="page-item active"><a class="page-link active" href="/Registration/IndexRegistration?orderBy=@Model.OrderBy&currentPage=@i"> @i</a></li>
 
                 }
                 else
@@ -244,5 +249,38 @@
             }
         </ul>
     </nav>
-
 </div>
+<br />
+
+
+@section Scripts
+    {
+    <script>
+        $(document).ready(function () {
+            $('#myTable').DataTable(
+                {
+                    "paging": false
+                });
+        });
+    </script>
+
+    <script>
+        $(document).ready(function () {
+            $('.delete-button').click(function () {
+                var registrationId = $(this).data('registrationid');
+                console.log(registrationId);
+                $('#registrationIdToDelete').text(registrationId); // Set the StateId in the modal
+                $('#deleteModalButton').attr('href', '/Registration/RemoveRegistration?registrationId=' + registrationId); // Set the Delete button's URL
+            });
+        });
+
+        $(document).ready(function () {
+            $('.enable-button').click(function () {
+                var registrationId = $(this).data('registrationid');
+                $('#registrationIdToEnable').text(registrationId); // Set the StateId in the modal
+                $('#enableModalButton').attr('href', '/Registration/EnableRegistration?registrationId=' + registrationId); // Set the button's URL
+            });
+        });
+    </script>
+}
+
