--- a/ShoppingCartWeb/Views/RoleMaster/IndexRoleMaster.cshtml
+++ b/ShoppingCartWeb/Views/RoleMaster/IndexRoleMaster.cshtml
@@ -1,4 +1,4 @@
-﻿@model IEnumerable<ShoppingCartWeb.Models.Dto.RoleMasterDTO>
+﻿@model ShoppingCartWeb.Models.VM.RoleMasterPaginationVM
 
 @{
     Layout = "~/Views/Shared/_Layout.cshtml";
@@ -20,7 +20,7 @@
     </div>
 
     <div class="col-2 d-flex justify-content-end align-items-start">
-        <a asp-controller="RoleMaster" asp-action="UpdateRoleMaster" class="btn btn-primary btn-sm">
+        <a asp-controller="RoleMaster" asp-action="CreateRoleMaster" class="btn btn-primary btn-sm">
             <div class="d-flex align-items-center">
                 <span class="d-inline-block align-middle" style="font-size: 17px;"><i class="bi bi-plus-square-fill"></i> Create</span>
             </div>
@@ -36,7 +36,7 @@
 
 
     <div class="table-responsive">
-        <table class="table table-bordered">
+        <table id="myTable" class="table table-bordered">
             <thead>
                 <tr>
                     <th>
@@ -49,7 +49,7 @@
                 </tr>
             </thead>
             <tbody>
-                @foreach (var item in Model)
+                @foreach (var item in Model.RoleMasterDTO)
                 {
                     <tr>
                         <td>@item.RoleName</td>
@@ -59,12 +59,15 @@
                             <td style="white-space: nowrap;">
                                 <div class="btn-group" role="group">
 
-                                    <a asp-controller="RoleMaster" asp-action="UpdateRoleMaster" asp-route-roleId="@item.RoleId" class="btn btn-sm ml-2">
+                                    <a asp-controller="RoleMaster" asp-action="UpdateRoleMaster" asp-route-roleId="@item.RoleId" asp-route-currentPageNo="@Model.CurrentPage" class="btn btn-sm ml-2">
                                         <span id="boot-icon" class="bi bi-pencil-square" style="font-size: 17px; color: rgb(0, 128, 55); -webkit-text-stroke-width: 0.6px; opacity: 0.9;"></span>
                                     </a>
 
-                                    <a href="#" class="btn btn-sm ml-2" data-toggle="modal" data-target="#deleteModal_@item.RoleId">
-                                        <span id="boot-icon" class="bi bi-trash-fill" style="font-size: 17px; color: rgb(255, 0, 0); -webkit-text-stroke-width: 0px; opacity: 0.9;"></span>
+                                    <a href="#" class="btn ml-1 text-danger delete-button" style="font:bold" data-toggle="modal" data-target="#deleteModal" data-roleId="@item.RoleId">
+
+                                        <span id="boot-icon" class="bi bi-trash-fill"
+                                              style="font-size: 17px; color: rgb(255, 0, 0); -webkit-text-stroke-width: 0px; opacity: 0.9;">
+                                        </span>
                                     </a>
                                 </div>
                             </td>
@@ -73,80 +76,138 @@
                         {
                             <td>
                                 <div class="btn-group" role="group">
-                                    <a href="#" class="btn btn-primary btn-sm ml-2" data-toggle="modal" data-target="#enableModal_@item.RoleId"> Active </a>
+                                    <a href="#" class="btn btn-primary btn-sm ml-2 enable-button" data-toggle="modal" data-target="#enableModal" data-roleId="@item.RoleId">
+                                        Active
+                                    </a>
                                 </div>
                             </td>
                         }
                     </tr>
 
-                    <!-- Enable Confirmation Modal for each item -->
-                    <div class="modal fade" id="enableModal_@item.RoleId" tabindex="-1" role="dialog" aria-labelledby="enableModalLabel" aria-hidden="true">
-                        <div class="modal-dialog" role="document">
-                            <div class="modal-content">
-                                <div class="modal-header">
-                                    <h5 class="modal-title" id="enableModalLabel">Confirm Enable</h5>
-                                    <button type="button" class="close" data-dismiss="modal" aria-label="Close">
-                                        <span aria-hidden="true">&times;</span>
-                                    </button>
-                                </div>
-                                <div class="modal-body">
-                                    Are you sure you want to Enable this item?
-                                </div>
-                                <div class="modal-footer">
-                                    <button type="button" class="btn btn-secondary" data-dismiss="modal">No</button>
-                                    <a asp-controller="RoleMaster" asp-action="EnableRole" asp-route-roleId="@item.RoleId" class="btn btn-success">Yes</a>
-                                </div>
-                            </div>
-                        </div>
-                    </div>
-
-
-                    <!-- Delete Confirmation Modal for each item -->
-                    <div class="modal fade" id="deleteModal_@item.RoleId" tabindex="-1" role="dialog" aria-labelledby="deleteModalLabel" aria-hidden="true">
-                        <div class="modal-dialog" role="document">
-                            <div class="modal-content">
-                                <div class="modal-header">
-                                    <h5 class="modal-title" id="deleteModalLabel">Confirm Deletion</h5>
-                                    <button type="button" class="close" data-dismiss="modal" aria-label="Close">
-                                        <span aria-hidden="true">&times;</span>
-                                    </button>
-                                </div>
-                                <div class="modal-body">
-                                    Are you sure you want to delete this item?
-                                </div>
-                                <div class="modal-footer">
-                                    <button type="button" class="btn btn-secondary" data-dismiss="modal">Cancel</button>
-                                    <a asp-controller="RoleMaster" asp-action="RemoveRoleMaster" asp-route-roleId="@item.RoleId" class="btn btn-danger">Delete</a>
-                                </div>
-                            </div>
-                        </div>
-                    </div>
                 }
+
+                <!-- Enable Confirmation Modal for each item -->
+                <div class="modal fade" id="enableModal" tabindex="-1" role="dialog" aria-labelledby="enableModalLabel" aria-hidden="true">
+                    <div class="modal-dialog" role="document">
+                        <div class="modal-content">
+                            <div class="modal-header">
+                                <h5 class="modal-title" id="enableModalLabel">Confirm Enable</h5>
+                                <button type="button" class="close" data-dismiss="modal" aria-label="Close">
+                                    <span aria-hidden="true">&times;</span>
+                                </button>
+                            </div>
+                            <div class="modal-body">
+                                Are you sure you want to Enable this item?
+                            </div>
+                            <div class="modal-footer">
+                                <button type="button" class="btn btn-secondary" data-dismiss="modal">No</button>
+                                <a id="enableModalButton" asp-controller="RoleMaster" asp-action="EnableRole" asp-route-roleId="" asp-route-currentPageNo="@Model.CurrentPage" class="btn btn-success">Yes</a>
+                            </div>
+                        </div>
+                    </div>
+                </div>
+
+                <!-- Delete Confirmation Modal for each item -->
+                <div class="modal fade" id="deleteModal" tabindex="-1" role="dialog" aria-labelledby="deleteModalLabel" aria-hidden="true">
+                    <div class="modal-dialog" role="document">
+                        <div class="modal-content">
+                            <div class="modal-header">
+                                <h5 class="modal-title" id="deleteModalLabel">Confirm Deletion</h5>
+                                <button type="button" class="close" data-dismiss="modal" aria-label="Close">
+                                    <span aria-hidden="true">&times;</span>
+                                </button>
+                            </div>
+                            <div class="modal-body">
+                                Are you sure you want to delete this item?
+                            </div>
+                            <div class="modal-footer">
+                                <button type="button" class="btn btn-secondary" data-dismiss="modal">Cancel</button>
+                                <a id="deleteModalButton" asp-controller="RoleMaster" asp-action="RemoveRoleMaster" asp-route-roleId="" asp-route-currentPageNo="@Model.CurrentPage" class="btn btn-danger">Delete</a>
+                            </div>
+                        </div>
+                    </div>
+                </div>
+
             </tbody>
         </table>
 
     </div>
+
+    <br />
+    <br />
+
+    <div>
+
+        <nav aria-label="Page navigation example" style="float: right;margin-top: -35px;margin-right: 2px;font-size: smaller;">
+            <ul class="pagination">
+                @if (Model.CurrentPage > 1)
+                {
+                    <li class="page-item">
+                        <a class="page-link" href="/RoleMaster/IndexRoleMaster?orderBy=@Model.OrderBy&currentPage=@(Model.CurrentPage-1)" aria-label="Previous">
+                            <span aria-hidden="true">&laquo;</span>
+                        </a>
+                    </li>
+                }
+
+                @for (int i = 1; i <= Model.TotalPages; i++)
+                {
+                    if (i == Model.CurrentPage)
+                    {
+                        <li class="page-item active"><a class="page-link active" href="/RoleMaster/IndexRoleMaster?orderBy=@Model.OrderBy&currentPage=@i"> @i</a></li>
+
+                    }
+                    else
+                    {
+                        <li class="page-item"><a class="page-link" href="/RoleMaster/IndexRoleMaster?orderBy=@Model.OrderBy&currentPage=@i"> @i</a></li>
+                    }
+                }
+                @if (Model.CurrentPage < Model.TotalPages)
+                {
+                    <li class="page-item">
+                        <a class="page-link" href="/RoleMaster/IndexRoleMaster?orderBy=@Model.OrderBy&currentPage=@Model.CurrentPage+1" aria-label="Next">
+                            <span aria-hidden="true">&raquo;</span>
+                        </a>
+                    </li>
+                }
+            </ul>
+        </nav>
+
+    </div>
+
+
+
 </div>
 
 @section Scripts {
-    <!-- Bootstrap CSS -->
-    <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/4.5.2/css/bootstrap.min.css">
 
-    <!-- jQuery -->
-    <script src="https://ajax.googleapis.com/ajax/libs/jquery/3.5.1/jquery.min.js"></script>
 
-    <!-- Bootstrap JavaScript -->
-    <script src="https://cdnjs.cloudflare.com/ajax/libs/popper.js/1.16.0/umd/popper.min.js"></script>
-    <script src="https://maxcdn.bootstrapcdn.com/bootstrap/4.5.2/js/bootstrap.min.js"></script>
-
-    <!-- Bootstrap Table CSS and JavaScript -->
-    <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/bootstrap-table/1.18.3/bootstrap-table.min.css">
-    <script src="https://cdnjs.cloudflare.com/ajax/libs/bootstrap-table/1.18.3/bootstrap-table.min.js"></script>
     <script>
         $(document).ready(function () {
-            $('#table').bootstrapTable();
+            $('#myTable').DataTable(
+                {
+                    "paging": false
+                });
+        });
+    </script>
+
+    <script>
+        $(document).ready(function () {
+            $('.delete-button').click(function () {
+                var roleId = $(this).data('roleid');
+                console.log(roleId);
+                $('#roleIdToDelete').text(roleId); // Set the RoleId in the modal
+                $('#deleteModalButton').attr('href', '/RoleMaster/RemoveRoleMaster?roleId=' + roleId); // Set the Delete button's URL
+            });
         });
 
+        $(document).ready(function () {
+            $('.enable-button').click(function () {
+                var roleId = $(this).data('roleid');
+                $('#roleIdToDelete').text(roleId); // Set the StateId in the modal
+                $('#enableModalButton').attr('href', '/RoleMaster/EnableRole?roleId=' + roleId); // Set the button's URL
+            });
+        });
     </script>
-    
 }
+
+
