--- a/ShoppingCartWeb/Views/Shared/_Layout.cshtml
+++ b/ShoppingCartWeb/Views/Shared/_Layout.cshtml
@@ -2,6 +2,7 @@
 <!DOCTYPE html>
 
 @inject Microsoft.AspNetCore.Http.IHttpContextAccessor httpAcc
+
 <html lang="en">
 <head>
     <meta charset="utf-8">
@@ -17,11 +18,16 @@
     <script src="https://code.jquery.com/ui/1.12.1/jquery-ui.min.js"></script>
 
     <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.0/dist/js/bootstrap.bundle.min.js"></script>
-    <script type="text/javascript" src="https://cdn.datatables.net/v/bs4-4.6.0/jq-3.6.0/dt-1.13.1/b-2.3.3/fc-4.2.1/sc-2.0.7/sb-1.4.0/sp-2.1.0/sl-1.5.0/datatables.min.js"></script>
+    
     <script type="text/javascript" src="https://cdnjs.cloudflare.com/ajax/libs/twitter-bootstrap/4.6.0/js/bootstrap.min.js"></script>
 
+    <!-- #Table Demo Script -->
 
+    <link rel="stylesheet" href="https://cdn.datatables.net/1.13.6/css/jquery.dataTables.css" />
 
+    <script src="https://cdn.datatables.net/1.13.6/js/jquery.dataTables.js"></script>
+
+   
     <!-- Google Font: Source Sans Pro -->
     <link rel="stylesheet" href="https://fonts.googleapis.com/css?family=Source+Sans+Pro:300,400,400i,700&display=fallback">
     <!-- Font Awesome -->
@@ -51,13 +57,10 @@
                 </li>*@
                 <li class="nav-item d-none d-sm-inline-block">
 
-                    @if (httpAcc.HttpContext.Session.GetString(SD.SessionToken) != null &&
-                    httpAcc.HttpContext.Session.GetString(SD.SessionToken).ToString().Length > 0)
-                    {
+                    
                     <li class="nav-item">
-                        <a class="nav-link text-white" asp-controller="User" asp-action="Login">Logout</a>
+                        <a class="nav-link text-white" asp-controller="User" asp-action="Logout">Logout</a>
                     </li>
-                    }
             </ul>
 
         </nav>
@@ -97,7 +100,7 @@
                                 <li class="nav-item">
                                     <a class="nav-link @(currentController == "Registration" && (currentAction == "IndexRegistration" || currentAction=="CreateRegistration" || currentAction == "UpdateRegistration" ) ? "active" : "")" asp-controller="Registration" asp-action="IndexRegistration">
 
-                                        General Registration
+                                        Person Registration
 
                                     </a>
                                 </li>
@@ -113,7 +116,10 @@
                             </ul>
                         </li>
 
-                        <li class="nav-item @(currentController == "RoleMaster" || currentController == "CategoryMaster" || currentController == "CountryMaster" || currentController == "StateMaster" &&
+                        @if (User.IsInRole("Admin"))
+                        {
+
+                            <li class="nav-item @(currentController == "RoleMaster" || currentController == "CategoryMaster" || currentController == "CountryMaster" || currentController == "StateMaster" &&
 
                         (currentAction == "IndexRoleMaster" || currentAction == "CreateRoleMaster" || currentAction == "UpdateRoleMaster" ||
                         currentAction == "IndexCategoryMaster" || currentAction == "CreateCategoryMaster" || currentAction == "UpdateCategoryMaster" ||
@@ -121,60 +127,43 @@
                         currentAction == "IndexStateMaster" || currentAction == "CreateStateMaster" || currentAction == "UpdateStateMaster")
                         ? "menu-open" : "")">
 
-                            <a href="#" class="nav-link @(currentController == "RoleMaster" || currentController == "CategoryMaster" || currentController == "CountryMaster" || currentController == "StateMaster" &&
+                                <a href="#" class="nav-link @(currentController == "RoleMaster" || currentController == "CategoryMaster" || currentController == "CountryMaster" || currentController == "StateMaster" &&
 
                         (currentAction == "IndexRoleMaster" || currentAction == "CreateRoleMaster" || currentAction == "UpdateRoleMaster" ||
                         currentAction == "IndexCategoryMaster" || currentAction == "CreateCategoryMaster" || currentAction == "UpdateCategoryMaster" ||
                         currentAction == "IndexCountryMaster" || currentAction == "CreateCountryMaster" || currentAction == "UpdateCountryMaster" ||
                         currentAction == "IndexStateMaster" || currentAction == "CreateStateMaster" || currentAction == "UpdateStateMaster") ? "active" : "")">
 
-                                <i class="nav-icon fas fa-tree"></i>
-                                <p>
-                                    Masters
-                                    <i class="fas fa-angle-left right"></i>
-                                </p>
-                            </a>
+                                    <i class="nav-icon fas fa-tree"></i>
+                                    <p>
+                                        Masters
+                                        <i class="fas fa-angle-left right"></i>
+                                    </p>
+                                </a>
 
-                            <ul class="nav nav-treeview">
+                                <ul class="nav nav-treeview">
 
-                                <li class="nav-item">
-                                    <a class="nav-link @(currentController == "RoleMaster" && (currentAction == "IndexRoleMaster" || currentAction == "CreateRoleMaster" || currentAction == "UpdateRoleMaster") ? "active" : "")" asp-controller="RoleMaster" asp-action="IndexRoleMaster">
-                                        Role Master
-                                    </a>
-                                </li>
+                                    <li class="nav-item">
+                                        <a class="nav-link @(currentController == "RoleMaster" && (currentAction == "IndexRoleMaster" || currentAction == "CreateRoleMaster" || currentAction == "UpdateRoleMaster") ? "active" : "")" asp-controller="RoleMaster" asp-action="IndexRoleMaster">
+                                            Role Master
+                                        </a>
+                                    </li>
 
 
-                                <li class="nav-item">
-                                    <a class="nav-link @(currentController == "CategoryMaster" && (currentAction == "IndexCategoryMaster" || currentAction == "CreateCategoryMaster" || currentAction == "UpdateCategoryMaster") ? "active" : "")" asp-controller="CategoryMaster" asp-action="IndexCategoryMaster">Category Master</a>
-                                </li>
-                                <li class="nav-item">
-                                    <a class="nav-link @(currentController == "CountryMaster" && (currentAction == "IndexCountryMaster" || currentAction == "CreateCountryMaster" || currentAction == "UpdateCountryMaster") ? "active" : "")" asp-controller="CountryMaster" asp-action="IndexCountryMaster">Country Master</a>
-                                </li>
-                                <li class="nav-item">
-                                    <a class="nav-link @(currentController == "StateMaster" && (currentAction == "IndexStateMaster" || currentAction == "CreateStateMaster" || currentAction == "UpdateStateMaster") ? "active" : "")" asp-controller="StateMaster" asp-action="IndexStateMaster">State Master</a>
-                                </li>
-                            </ul>
+                                    <li class="nav-item">
+                                        <a class="nav-link @(currentController == "CategoryMaster" && (currentAction == "IndexCategoryMaster" || currentAction == "CreateCategoryMaster" || currentAction == "UpdateCategoryMaster") ? "active" : "")" asp-controller="CategoryMaster" asp-action="IndexCategoryMaster">Category Master</a>
+                                    </li>
+                                    <li class="nav-item">
+                                        <a class="nav-link @(currentController == "CountryMaster" && (currentAction == "IndexCountryMaster" || currentAction == "CreateCountryMaster" || currentAction == "UpdateCountryMaster") ? "active" : "")" asp-controller="CountryMaster" asp-action="IndexCountryMaster">Country Master</a>
+                                    </li>
+                                    <li class="nav-item">
+                                        <a class="nav-link @(currentController == "StateMaster" && (currentAction == "IndexStateMaster" || currentAction == "CreateStateMaster" || currentAction == "UpdateStateMaster") ? "active" : "")" asp-controller="StateMaster" asp-action="IndexStateMaster">State Master</a>
+                                    </li>
+                                </ul>
 
-                            @*<ul class="nav nav-treeview">
 
-                            <li class="nav-item">
-                            <a class="nav-link " asp-controller="RoleMaster" asp-action="IndexRoleMaster">Role Master</a>
                             </li>
-
-                            <li class="nav-item">
-                            <a class="nav-link " asp-controller="CategoryMaster" asp-action="IndexCategoryMaster">Category Master</a>
-                            </li>
-
-                            <li class="nav-item">
-                            <a class="nav-link " asp-controller="CountryMaster" asp-action="IndexCountryMaster">Country Master</a>
-                            </li>
-
-                            <li class="nav-item">
-                            <a class="nav-link " asp-controller="StateMaster" asp-action="IndexStateMaster">State Master</a>
-                            </li>
-
-                            </ul>*@
-                        </li>
+                        }
 
                     </ul>
                 </nav>
@@ -214,6 +203,9 @@
     <script src="../../plugins/bootstrap/js/bootstrap.bundle.min.js"></script>*@
     <!-- AdminLTE App -->
     <script src="../../dist/js/adminlte.min.js"></script>
+
+
+
     <script>
 
         $(document).ready(function () {
@@ -253,7 +245,7 @@
     <script src="~/AdminLTE/dist/js/pages/dashboard.js"></script>
     <script src="~/AdminLTE/dist/js/demo.js"></script>*@
 
-    <script type="text/javascript" src="https://cdn.datatables.net/v/bs4-4.6.0/jq-3.6.0/dt-1.13.1/b-2.3.3/fc-4.2.1/sc-2.0.7/sb-1.4.0/sp-2.1.0/sl-1.5.0/datatables.min.js"></script>
+   
     <script type="text/javascript" src="https://cdnjs.cloudflare.com/ajax/libs/twitter-bootstrap/4.6.0/js/bootstrap.min.js"></script>
 
     @*for sweet alert*@
