--- a/ShoppingCartWeb/Views/StateMaster/IndexStateMaster.cshtml
+++ b/ShoppingCartWeb/Views/StateMaster/IndexStateMaster.cshtml
@@ -2,7 +2,7 @@
 
 @{
     Layout = "~/Views/Shared/_Layout.cshtml";
-    //@(ViewContext.RouteData.Values["Controller"].ToString() == "StateMaster" && ViewContext.RouteData.Values["Action"].ToString() == "IndexStateMaster" ? "active" : "")
+
 }
 
 
@@ -18,6 +18,8 @@
 
         <h1 class="text-dark">States</h1>
     </div>
+
+
     <div class="col-2 d-flex justify-content-end align-items-start">
 
         <a asp-controller="StateMaster" asp-action="CreateStateMaster" class="btn btn-primary btn-sm ms-2">
@@ -35,7 +37,8 @@
 <div>
 
     <div class="table-responsive">
-        <table class="table table-bordered">
+
+        <table id="myTable" class="table table-bordered">
             <thead>
                 <tr>
                     <th>
@@ -67,11 +70,8 @@
                                         <span id="boot-icon" class="bi bi-pencil-square" style="font-size: 17px; color: rgb(0, 128, 55); -webkit-text-stroke-width: 0.6px; opacity: 0.9;"></span>
                                     </a>
 
-                                    <a href="#" class="btn ml-1 text-danger delete-button"
-                                       style="font:bold"
-                                       data-toggle="modal"
-                                       data-target="#deleteModal"
-                                       data-stateId="@item.StateId">
+                                    <a href="#" class="btn ml-1 text-danger delete-button" style="font:bold" data-toggle="modal" data-target="#deleteModal" data-stateId="@item.StateId">
+
                                         <span id="boot-icon" class="bi bi-trash-fill"
                                               style="font-size: 17px; color: rgb(255, 0, 0); -webkit-text-stroke-width: 0px; opacity: 0.9;">
                                         </span>
@@ -85,13 +85,9 @@
 
                                 <div class="btn-group" role="group">
 
-                                    <a href="#" class="btn btn-primary btn-sm ml-2 enable-button"
-                                       data-toggle="modal"
-                                       data-target="#enableModal"
-                                       data-stateId="@item.StateId">
+                                    <a href="#" class="btn btn-primary btn-sm ml-2 enable-button" data-toggle="modal" data-target="#enableModal"data-stateId="@item.StateId">
                                         Active
                                     </a>
-
 
                                 </div>
                             </td>
@@ -101,7 +97,7 @@
 
 
                 }
-                
+
                 <!-- Enable Confirmation Modal -->
                 <div class="modal fade" id="enableModal" tabindex="-1" role="dialog" aria-labelledby="enableModalLabel" aria-hidden="true">
                     <div class="modal-dialog" role="document">
@@ -149,64 +145,13 @@
         </table>
 
 
-        <script>
-            $(document).ready(function () {
-                $('.delete-button').click(function () {
-                    var stateId = $(this).data('stateid');
-                    console.log(stateId);
-                    $('#stateIdToDelete').text(stateId); // Set the StateId in the modal
-                    $('#deleteModalButton').attr('href', '/StateMaster/RemoveStateMaster?stateId=' + stateId); // Set the Delete button's URL
-                });
-            });
-
-            $(document).ready(function () {
-                $('.enable-button').click(function () {
-                    var stateId = $(this).data('stateid');
-                    $('#stateIdToEnable').text(stateId); // Set the StateId in the modal
-                    $('#enableModalButton').attr('href', '/StateMaster/EnableStateMaster?stateId=' + stateId); // Set the button's URL
-                });
-            });
-
-
-                                                                        //$(document).ready(function () {
-                                                                        //    $("#deleteConfirmationModal").on("click", function (e) {
-                                                                        //        e.preventDefault();
-                                                                        //        var stateId = $(this).data("stateId");
-                                                                        //        Swal.fire({
-                                                                        //            title: 'Confirm Deletion',
-                                                                        //            text: 'Are you sure you want to delete this user?',
-                                                                        //            icon: 'warning',
-                                                                        //            showCancelButton: true,
-                                                                        //            confirmButtonColor: '#d33',
-                                                                        //            cancelButtonColor: '#3085d6',
-                                                                        //            confirmButtonText: 'Delete',
-                                                                        //            cancelButtonText: 'Cancel'
-                                                                        //        }).then((result) => {
-                                                                        //            if (result.isConfirmed) {
-                                                                        //                alert(registerstateId);
-                                                                        //                                                    .ajax({
-                                                                        //                    type: "POST",
-                                                                        //                    url: '@Url.Action("RemoveStateMaster", "StateMaster")',
-                                                                        //                    data: { stateId: $(this).data("stateId") },
-                                                                        //                    dataType: 'json',
-                                                                        //                    success: function (data) {
-                                                                        //                        location.reload(true);
-                                                                        //                    },
-                                                                        //                    error: function () {
-                                                                        //                        location.reload(true);
-                                                                        //                    }
-                                                                        //                });
-                                                                        //            }
-                                                                        //        });
-                                                                        //    });
-                                                                        //});
-
-        </script>
-
-
     </div>
 
-    <nav aria-label="Page navigation example" class="justify-content-end">
+    <br />
+    <br />
+
+    <nav aria-label="Page navigation example" style="float: right;margin-top: -35px;margin-right: 2px;font-size: smaller;">
+
         <ul class="pagination">
             @if (Model.CurrentPage > 1)
             {
@@ -221,7 +166,8 @@
             {
                 if (i == Model.CurrentPage)
                 {
-                    <li class="page-item"><a class="page-link active" href="/StateMaster/IndexStateMaster?orderBy=@Model.OrderBy&currentPage=@i"> @i</a></li>
+
+                    <li class="page-item active"><a class="page-link active" href="/StateMaster/IndexStateMaster?orderBy=@Model.OrderBy&currentPage=@i"> @i</a></li>
 
                 }
                 else
@@ -241,5 +187,40 @@
     </nav>
 
 </div>
+
+<br />
+
+@section Scripts
+    {
+
+    <script>
+        $(document).ready(function () {
+            $('#myTable').DataTable(
+                {
+                    "paging": false
+                });
+        });
+    </script>
+
+    <script>
+        $(document).ready(function () {
+            $('.delete-button').click(function () {
+                var stateId = $(this).data('stateid');
+                console.log(stateId);
+                $('#stateIdToDelete').text(stateId); // Set the StateId in the modal
+                $('#deleteModalButton').attr('href', '/StateMaster/RemoveStateMaster?stateId=' + stateId); // Set the Delete button's URL
+            });
+        });
+
+        $(document).ready(function () {
+            $('.enable-button').click(function () {
+                var stateId = $(this).data('stateid');
+                $('#stateIdToEnable').text(stateId); // Set the StateId in the modal
+                $('#enableModalButton').attr('href', '/StateMaster/EnableStateMaster?stateId=' + stateId); // Set the button's URL
+            });
+        });
+    </script>
+
+}
 
 
