--- a/ShoppingCartWeb/Views/User/Login.cshtml
+++ b/ShoppingCartWeb/Views/User/Login.cshtml
@@ -7,6 +7,9 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.0/dist/css/bootstrap.min.css">
+
+
+
     <style>
         body {
             background-color: #394b39; /* Set your preferred background color */
@@ -21,7 +24,9 @@
     </style>
     <title>Login Page</title>
 </head>
+<br />
 <body>
+    <partial name="_Notification" />
     <div class="container mt-5">
         <div class="row justify-content-center">
             <div class="col-md-6">
@@ -31,10 +36,12 @@
                     </div>
                     <div class="card-body">
                         <form method="post">
-                            <div class="container border p-4">
+                            <div >
                                 <div class="row text-center">
                                     <h1>Login</h1>
                                 </div>
+
+                                <br />
                                 <div class="row text-center">
                                     <div asp-validation-summary="ModelOnly" class="text-danger"></div>
                                 </div>
@@ -62,10 +69,28 @@
             </div>
         </div>
     </div>
+
+    
+
 </body>
 </html>
 
 
 @section Scripts {
     <partial name="_ValidationScriptsPartial" />
+
+    <script>
+        window.onpageshow = function (event) {
+            if (event.persisted) {
+                window.location.reload();
+            }
+        };
+    </script>
+
+    <script>
+        window.addEventListener('popstate', function () {
+            window.history.pushState(null, null, window.location.href);
+        });
+    </script>
+
 }
